Some cleanup in poms and test, plus newest transformation version
Change-Id: Ieed47efc7301db8977afc548578641fb00d4ce83